--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ log/
 .idea/
 
 data/
+data_basic/
+data_extended/
 src/dnf_cognitive_architecture/scripts/captured_images
 src/dnf_cognitive_architecture/scripts/model
 
