--- a/src/dnf_cognitive_architecture/CMakeLists.txt
+++ b/src/dnf_cognitive_architecture/CMakeLists.txt
@@ -27,6 +27,8 @@ install(
     scripts/mock_speech_recognition.py
     scripts/mock_gripper.py
     scripts/output_node_gripper.py
+    scripts/udp_listener_node.py
+    scripts/udp_response_sender_node.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
